# tri-fourier

./: .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  HANDOFF_PHASE2.5.md  HANDOFF_PHASE3.md  README.md  SESSION_CHECKPOINT.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_e2e.py
data/graph/: falkordb.rdb
deploy/helm/triagebot/: Chart.yaml  values.yaml
deploy/helm/trifourier/: Chart.yaml  values.yaml
deploy/kubernetes/: backup-cronjob.yaml  configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  rbac.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  README.md  WORKFLOW.md
scripts/: dev-setup.sh  minikube-validate.sh  seed_graph.py  staging-smoke-tests.sh
skills/log-analyzer/: SKILL.md
skills/metrics-analyzer/: SKILL.md
src/agents/: scoring.py
src/api/: main.py
src/triagebot/: __init__.py  cli.py  mcp_server.py
src/triagebot/agents/: __init__.py  log_analyzer.py  metrics_analyzer.py  orchestrator.py
src/triagebot/api/: __init__.py  server.py  slack_bot.py
src/triagebot/config/: __init__.py  settings.py
src/triagebot/graph/: __init__.py  backend.py
src/triagebot/models/: __init__.py  findings.py  scoring.py
src/triagebot/skills/: __init__.py
src/trifourier/: __init__.py  cli.py  mcp_server.py
tests/: TESTING.md  conftest.py  requirements-test.txt
tests/e2e/: test_full_investigation_pipeline.py  test_log_spike_investigation.py  test_slack_workflow.py
tests/fixtures/: sample_k8s.json  sample_logs.json  sample_metrics.json
tests/integration/: test_graph_tools.py  test_orchestrator_specialists.py
tests/performance/: test_falkordb_benchmarks.py  test_response_times.py
tests/security/: test_input_validation.py
tests/unit/: test_api_health.py  test_confidence_scoring.py  test_graph_queries.py  test_log_analyzer.py  test_metrics_analyzer.py  test_orchestrator.py
(+36 files in other folders)
